--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Web Game Engine</title>
   </head>
   <body>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/tests/index.js"></script>
   </body>
 </html>
